[package]
name = "github_app"
version = "0.1.0"
authors = ["Chris MacNaughton <chris@centaurisolutions.nl>"]
edition = "2018"

[dependencies]
jsonwebtoken = "6"
serde = "1.0.116"
serde_json = "1.0.57"
serde_derive = "1.0.116"
failure = "0.1.8"
curl = "0.4.33"
chrono = { version = "0.4.18", features = ["serde"] }
log = "0.4.11"

[dev_dependencies]
simple_logger = "1.0.1"
